--- a/index.html
+++ b/index.html
@@ -29,5 +29,42 @@
     <img src="donna.jpg" class="donna">
   </div>
   </main>
+  <main class="main2">
+  <h1 class="newp">New planet, new me</h1>
+  <div class="banner">
+    <div>
+    <img  class="imgb" src="moon.jpg">
+    <p class="bannerp"> La nostra nuova casa</p>
+    </div>
+    <div>
+    <img class="imgb" src="space.jpg" alt="">
+    <p class="bannerp">Le nostre nuove strade</p>
+    </div>
+    <div>
+    <img  class="imgb" src="astronaut.jpg" alt="">
+    <p class="bannerp">I nostri nuovi vestiti</p>
+    </div>
+    <div>
+    <img  class="imgb" src="planet.jpg" alt="">
+    <p class="bannerp">Il nostro nuovo vicino</p>
+    </div>
+  </div>
+  <div class="banner2">
+  <h2 class="hope">Ci sono così tante possibilità là fuori!</h2>
+  <p>Con il nostro programma hai a disposizione diversi servizi</p>
+  </div>
+  </main>
+  <div class="quote">
+    <h1>“Un pianeta migliore è un sogno che inizia a realizzarsi quando ognuno di noi decide di migliorare se stesso.”</h1>
+    <h2>Mahtma Gandhi</h2>
+  </div>
+  <div class="newsletter">
+    <h3 class="wanna">Vuoi restare aggiornato?</h3>
+    <p class="friday">La nostra newsletter spedisce nuove informazioni ogni venerdì ai suoi iscritti!</p>
+    <button class="aggiorn">Aggiornatemi!</button>
+  </div>
+  <div class="fine"> 
+    <p>Copyright © The Odin Project 2023</p>
+  </div>
 </body>
 </html>
