--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 </head>
 <body>
     <main>
+      <h2 class="logo"> to-the-moon.exe</h2>
   <nav class="navbar">
-    <li>Siamo qui</li>
-    <li>Contatti</li>
-    <li>Domande e Risposte</li>
+    <li>About us</li>
+    <li>Contact us</li>
+    <li>Frequently asked questions </li>
   </nav>
     </div>
   <div class="bigdiv">
     <div class="piccolino">
     <h2 class="futurenow">Future is now</h2>
-    <p class="para1">La Terra ha ormai finito il suo tempo. Ma ti diamo una buona notizia: sei ancora in tempo per iscriverti al nostro nuovo programma To-the-moon.
-        Hai ancora la possibilità di rifarti una vita sul nostro satellite preferito.
-    </p>
-    <button class="sub">Iscriviti!</button>
+    <p class="para1"> Earth is almost doomed. Yet we have good news: you can still sign up to our To-The-Moon project. It's your chance to start a new life on our favorite satellite.</p>
+    <button class="sub">Sign up!</button>
     
     </div>
-    <img src="donna.jpg" class="donna">
+    <img src="woman2.jpg" class="donna">
   </div>
   </main>
   <main class="main2">
@@ -34,34 +33,36 @@
   <div class="banner">
     <div>
     <img  class="imgb" src="moon.jpg">
-    <p class="bannerp"> La nostra nuova casa</p>
+    <p class="bannerp"> Our new home </p>
     </div>
     <div>
     <img class="imgb" src="space.jpg" alt="">
-    <p class="bannerp">Le nostre nuove strade</p>
+    <p class="bannerp">Our new roads</p>
     </div>
     <div>
     <img  class="imgb" src="astronaut.jpg" alt="">
-    <p class="bannerp">I nostri nuovi vestiti</p>
+    <p class="bannerp">Our new clothes</p>
     </div>
     <div>
     <img  class="imgb" src="planet.jpg" alt="">
-    <p class="bannerp">Il nostro nuovo vicino</p>
+    <p class="bannerp">Our new neighbor </p>
     </div>
   </div>
   <div class="banner2">
-  <h2 class="hope">Ci sono così tante possibilità là fuori!</h2>
-  <p>Con il nostro programma hai a disposizione diversi servizi</p>
+  <h2 class="hope">There are so many opportunities out there</h2>
+  <p class="discover">Discover our project</p>
   </div>
   </main>
   <div class="quote">
-    <h1>“Un pianeta migliore è un sogno che inizia a realizzarsi quando ognuno di noi decide di migliorare se stesso.”</h1>
-    <h2>Mahtma Gandhi</h2>
+    <h1>“A better planet is a dream that begins to come true when each of us decides to improve himself.”</h1>
+    <h2>Mahatma Gandhi</h2>
   </div>
+  <div class="news-back">
   <div class="newsletter">
-    <h3 class="wanna">Vuoi restare aggiornato?</h3>
-    <p class="friday">La nostra newsletter spedisce nuove informazioni ogni venerdì ai suoi iscritti!</p>
-    <button class="aggiorn">Aggiornatemi!</button>
+    <h3 class="wanna">Want to keep updated?</h3>
+    <p class="friday">Our newsletter provides new info to our clients every friday!</p>
+    <button class="aggiorn">Keep me updated!</button>
+  </div>
   </div>
   <div class="fine"> 
     <p>Copyright © The Odin Project 2023</p>
